--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
-	"name": "Sub-Muxer",
+	"name": "ANIME_LINK_BOT",
 	"description": "Telegram bot to know about anime and download anime",
 	"keywords": [
 		"telegram-bot",
-		"subtitles",
-		"muxing"
+		"INFORMATION",
+		"DOWNLOAD-LINK"
 	],
 	"repository": "https://github.com/MrProfessor999/ANIME_LINK_BOT",
 	"formation": {
