--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
 	},
 	"buildpacks": [
 		{
-			"url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+			"url": "https://github.com/MrProfessor999/heroku-buildpack-ffmpeg-latest"
 		},
 		{
 			"url": "heroku/python"
